--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <P>iam trying merge conflig errors and trying to reslove it</P>
     
 </body>
 </html>
