this is a new features

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <P>iam trying merge conflig errors and trying to reslove it</P>
+    <P>iam trying merge conflig errors and trying to reslove soon as possible</P>
     
 </body>
 </html>
